[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-handyllm"
version = "0.0.1"
authors = [
  { name="Atomie CHEN", email="atomic_cwh@163.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "pygments"
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/atomiechen/pygments-handyllm"
"Bug Tracker" = "https://github.com/atomiechen/pygments-handyllm/issues"


# Declare plugin lexers in this table. The key (like `hprompt_lexer` below) are
# not significant. The value has the form `module_name:ClassName`. The lexer
# class will be imported using `from module_name import ClassName`.

# See the attributes declared in hprompt_lexer.py for how to configure the
# language names and file patterns.

[project.entry-points."pygments.lexers"]
hprompt_lexer = "hprompt_lexer:HpromptLexer"

